Commander Genius Release v0.3.0.2 (CloneKeenPlus):
--------------------------------------------------
23-08-2009
- Improved the timer much more. (Many thanks to Pickle!!!)
- Solved message box bugs in Ep2.

21-08-2009
- New Menu System, compatible as ingame menu. (Still not implemented)
- Modified lightly the pogo physics
- removed some memory leaks
- reduced the source code at some parts
- fixed errors with mods

19-08-2009
- Added F1-Help Screen
- Improved Gargs AI
- Improved platform extender/retractor (bridges in Ep2)

16-08-2009
- Godmode now also makes keen fly with pogo
- Pogo jump are more sensitive to the button press-time.
- Improved High-Score System

15-08-2009
- New TextViewer for the Story Text and in future for others.

14-08-2009
- The Savegame system has been improved a lot!

12-08-2009
- New Timer System! At last!
- Minor issues have been fixed

09-08-2009
- Added Window lights in the ending scene
- Improved key-stacking logic

08-08-2009
- Better source-code. At least a little bit :-)
- Special key items can only be taken once. Even replaying the levels
- Now levels can be exited without doing something before through the exit door. Be careful ;-)
- Vorticon Commander in Ep1 now dies with 105 shots.
- Improved consistency of the program
- Improved memory management when decompressing graphics 
- Improved Enemys AI 

05-08-2009
- fixed crash when game in EP1 or 2 was ending
- fixed fonts problems in story section.

04-08-2009
- Fixed some minor issues with mods [Sprite Replacement] (Tulip)
- Added Ordering Info to Episode 1. Only works there!
- Episode 1 is now bundled with the interpreter

02-08-2009
- Updated the PC-Speaker Sound emulation (Thx to Napalm for a great lesson!)

01-08-2009
- Masked tile can now use semi-transparent pixels. Silcar 3 ghosts use that (Tulip)
- Implemented a new dialog system. Base for the future dialogs and menus
- Minor issues

26-07-2009
- fixed some bugs which made the game crash
- removed an old and obsolete class