@@ -25,10 +25,8 @@ CGraphics::CGraphics() {
 	blitbuffer=NULL;
 	scrollbuf_memsize = 0;
 	blitbuf_memsize = 0;
-}
 
-CGraphics::~CGraphics() {
-	// TODO Auto-generated destructor stub
+	pal_init();
 }
 
 bool CGraphics::allocScrollBufmem(void)
