@@ -36,30 +36,48 @@ void configPalette(int c, int dark, int r, int g, int b)
 
 // loads the EGA palette into the palette[] array. if dark=1, loads in
 // the palette used when the lights are off (in ep2)
-void pal_init(int dark)
+void pal_init()
 {
-  configPalette(0, dark, 0x00,0x00,0x00);
-  configPalette(1, dark, 0x00,0x00,0xa8);
-  configPalette(2, dark, 0x00,0xa8,0x00);
-  configPalette(3, dark, 0x00,0xa8,0xa8);
-  configPalette(4, dark, 0xa8,0x00,0x00);
-  configPalette(5, dark, 0xa8,0x00,0xa8);
-  configPalette(6, dark, 0xa8,0x54,0x00);
-  configPalette(7, dark, 0xa8,0xa8,0xa8);
-  configPalette(8, dark, 0x54,0x54,0x54);
-  configPalette(9, dark, 0x54,0x54,0xfc);
-  configPalette(10, dark, 0x54,0xfc,0x54);
-  configPalette(11, dark, 0x54,0xfc,0xfc);
-  configPalette(12, dark, 0xfc,0x54,0x54);
-  configPalette(13, dark, 0xfc,0x54,0xfc);
-  configPalette(14, dark, 0xfc,0xfc,0x54);
-  configPalette(15, dark, 0xfc,0xfc,0xfc);
+	configPalette(0, 0, 0x00,0x00,0x00);
+	configPalette(1, 0, 0x00,0x00,0xa8);
+	configPalette(2, 0, 0x00,0xa8,0x00);
+	configPalette(3, 0, 0x00,0xa8,0xa8);
+	configPalette(4, 0, 0xa8,0x00,0x00);
+	configPalette(5, 0, 0xa8,0x00,0xa8);
+	configPalette(6, 0, 0xa8,0x54,0x00);
+	configPalette(7, 0, 0xa8,0xa8,0xa8);
+	configPalette(8, 0, 0x54,0x54,0x54);
+	configPalette(9, 0, 0x54,0x54,0xfc);
+	configPalette(10, 0, 0x54,0xfc,0x54);
+	configPalette(11, 0, 0x54,0xfc,0xfc);
+	configPalette(12, 0, 0xfc,0x54,0x54);
+	configPalette(13, 0, 0xfc,0x54,0xfc);
+	configPalette(14, 0, 0xfc,0xfc,0x54);
+	configPalette(15, 0, 0xfc,0xfc,0xfc);
+
+	configPalette(0, 1, 0x00,0x00,0x00);
+	configPalette(1, 1, 0x00,0x00,0x00);
+	configPalette(2, 1, 0x00,0x00,0x00);
+	configPalette(3, 1, 0x00,0x00,0x00);
+	configPalette(4, 1, 0x00,0x00,0x00);
+	configPalette(5, 1, 0x00,0x00,0x00);
+	configPalette(6, 1, 0x00,0x00,0x00);
+	configPalette(7, 1, 0x54,0x54,0x54);
+	configPalette(8, 1, 0x00,0x00,0x00);
+	configPalette(9, 1, 0x00,0x00,0xa8);
+	configPalette(10, 1, 0x00,0xa8,0x00);
+	configPalette(11, 1, 0x00,0xa8,0xa8);
+	configPalette(12, 1, 0xa8,0x00,0x00);
+	configPalette(13, 1, 0xa8,0x00,0xa8);
+	configPalette(14, 1, 0xa8,0x54,0x00);
+	configPalette(15, 1, 0xa8,0xa8,0xa8);
 
   // 16 is black, for flashing during vorticon death sequence
   // (all black in the graphics is mapped to 16, then the border around
   // the screen is the only thing left at color 0, so we can change 0's
   // palette to change the border color)
-  configPalette(16, dark, 0x00,0x00,0x00);
+  configPalette(16, 0, 0x00,0x00,0x00);
+  configPalette(16, 1, 0x00,0x00,0x00);
 
   palette_ncolors = 17;
 }
