@@ -10,6 +10,11 @@
 
 #include <SDL.h>
 
+#ifdef TARGET_WIN32
+#define ulong unsigned long
+#define uint unsigned int
+#endif
+
 #define uchar	unsigned char
 
 #define TGA_NONE		0
